aggiornata sezione contatti, rimosso il form statico

--- a/contatti.html
+++ b/contatti.html
@@ -54,7 +54,7 @@
     </section>
 
     <section class="section section-light">
-      <div class="container two-cols">
+      <div class="container">
         <div class="fade-in delay-1">
           <h2>Contatto diretto</h2>
           <p>
@@ -69,34 +69,9 @@
             <p><strong>WhatsApp</strong>: +39 334 507 1226</p>
             <p><strong>Email</strong>: a.paolino0104@gmail.com</p>
             <a href="https://wa.me/393345071226" class="btn btn-primary btn-full">Scrivi ora su WhatsApp</a>
+            <a href="mailto:a.paolino0104@gmail.com" class="btn btn-outline btn-full" style="margin-top: 10px;">Invia
+              una Email</a>
           </div>
-        </div>
-        <div class="fade-in delay-2">
-          <h2>Scrivici dal sito</h2>
-          <p class="small-label">Questo form è statico. Su Netlify puoi attivare facilmente la gestione form.</p>
-          <form class="contact-form">
-            <label>
-              Chi sei?
-              <select name="tipo">
-                <option value="proprietario">Sono un proprietario</option>
-                <option value="ospite">Sono un ospite</option>
-              </select>
-            </label>
-            <label>
-              Nome e cognome
-              <input type="text" name="nome" placeholder="Nome e cognome" />
-            </label>
-            <label>
-              Email
-              <input type="email" name="email" placeholder="nome@esempio.com" />
-            </label>
-            <label>
-              Messaggio
-              <textarea name="messaggio" rows="4"
-                placeholder="Raccontaci del tuo immobile o del soggiorno che cerchi"></textarea>
-            </label>
-            <button type="submit" class="btn btn-primary btn-full">Invia</button>
-          </form>
         </div>
       </div>
     </section>
