--- a/servizio-dettaglio.html
+++ b/servizio-dettaglio.html
@@ -193,8 +193,8 @@
                          ${metaHtml}
                          ${opt.description ? `<p style="font-size:13px; color:#6b7280; margin-top:8px; line-height:1.4;">${opt.description}</p>` : ''}
                       </div>
-                      <div style="text-align:right;">
-                         <div style="font-weight:700; font-size:18px; color:var(--gold);">€ ${euros(opt.price_cents)}${priceSuffix}</div>
+                      <div style="text-align:right; flex-shrink:0;">
+                         <div style="font-weight:700; font-size:18px; color:var(--gold); white-space:nowrap;">€ ${euros(opt.price_cents)}${priceSuffix}</div>
                       </div>
                    </div>
                 </div>
