--- a/servizio-dettaglio.html
+++ b/servizio-dettaglio.html
@@ -164,6 +164,10 @@
                     // PRICE SUFFIX
                     if (d.rate_type === 'A Persona') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> / pers</span>';
                     if (d.rate_type === 'Complessivo') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> (Tot)</span>';
+                    if (d.rate_type === 'Tratta Fissa') priceSuffix = '';
+                    if (d.rate_type === 'Oraria') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> / ora</span>';
+                    if (d.rate_type === 'Giornaliera') priceSuffix = '<span style="font-size:12px; font-weight:400; color:#6b7280;"> / giorno</span>';
+                    if (d.rate_type === 'Personalizzata') priceSuffix = '';
 
                     // META DETAILS
                     let metaParts = [];
@@ -194,7 +198,7 @@
                          ${opt.description ? `<p style="font-size:13px; color:#6b7280; margin-top:8px; line-height:1.4;">${opt.description}</p>` : ''}
                       </div>
                       <div style="text-align:right; flex-shrink:0;">
-                         <div style="font-weight:700; font-size:18px; color:var(--gold); white-space:nowrap;">€ ${euros(opt.price_cents)}${priceSuffix}</div>
+                         ${opt.price_cents > 0 ? `<div style="font-weight:700; font-size:18px; color:var(--gold); white-space:nowrap;">€ ${euros(opt.price_cents)}${priceSuffix}</div>` : ''}
                       </div>
                    </div>
                 </div>
